copies/apache-airflow-yamls copy/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  ports:
    - name: "8973"
      port: 8973
      targetPort: 8973
  selector:
    io.kompose.service: worker
status:
  loadBalancer: {}
