copies/apache-airflow-yamls copy/route-webserver.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webserver
  namespace: dev-sf-deploy-test
  labels:
    app.kubernetes.io/instance: airflow-yamls-test
    io.kompose.service: webserver
spec:
  host: >-
    ibm-sf-airflow-webserver.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: webserver
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGDjCCBPagAwIBAgISA9nuODmbUp8ILcn1Glfm+VV8MA0GCSqGSIb3DQEBCwUA
[...]
      9uXjfg5lPwyVUEDebczE0n16
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAtOjWP58WZ4BzhKzYOLwr05qMVnCiE+Way5oaCox+IJxozZie
[...]
      9QkfPiIgP92AqS+AwzULOwWBnMbM9sB0+6UX4a3SJKOeMM/NXh44
      -----END RSA PRIVATE KEY-----
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        ibm-sf-airflow-webserver.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
      routerCanonicalHostname: >-
        router-default.devsfcluster-56118b4b985711fc98241a723e4ef72a-0000.eu-de.containers.appdomain.cloud
